--- a/.github/workflows/ai-issue-gemini.yml
+++ b/.github/workflows/ai-issue-gemini.yml
@@ -32,9 +32,9 @@ jobs:
 EOF
 )
 
-          RESPONSE=$(curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${{ secrets.GEMINI_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d "$JSON_PAYLOAD")
+          RESPONSE=$(curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${{ secrets.GEMINI_API_KEY }}" \
+  -H "Content-Type: application/json" \
+  -d "$JSON_PAYLOAD")
 
           COMMENT=$(echo "$RESPONSE" | jq -r '.candidates[0].content.parts[0].text')
           echo "$COMMENT" > reply.txt
